Added JS to main, wind & humidity section

--- a/style/main.css
+++ b/style/main.css
@@ -4,7 +4,7 @@
     text-align: center;
     padding: 20px;
     border: 1px solid black;
-    font-family: 'Cormorant Garamond', serif;
+    /*font-family: 'Cormorant Garamond', serif;*/
 }
 
 
