--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,7 @@
 .container {
     margin: 40px auto;
     text-align: center;
-    border: 1px solid black;
+    border: 1px solid lightgray;
     border-radius: 30px;
     padding: 30px;
 }
@@ -39,8 +39,16 @@ input {
     border-radius: 10px;
 }
 
-button {
-    border-radius: 10px;
+
+input {
+    border: 1px solid lightgrey;
+}
+.button {
+    background: #fff;
+}
+
+.button:hover {
+    background: #90D3F8;
 }
 
 a {
@@ -51,4 +59,12 @@ a {
 
 .active {
     color: #90D3F8;
+}
+
+.sourceCodeLink {
+    text-align: center;
+}
+
+.outerContainer {
+    text-align: center;
 }
