--- a/style/main.css
+++ b/style/main.css
@@ -4,10 +4,29 @@
     border: 1px solid lightgray;
     border-radius: 30px;
     padding: 30px;
+    font-family: 'Roboto', sans-serif;
 }
 
 main {
     padding-top: 30px;
+}
+
+h6 {
+    padding-bottom: 30px;
+}
+
+
+.temp, .realFeel, .locationIcon {
+    display: flex;
+    justify-content: center;
+}
+
+.fa-location-dot {
+    margin: 6px;
+}
+
+h3 {
+    padding-bottom: 20px;
 }
 
 li {
@@ -15,7 +34,7 @@ li {
 }
 
 .details {
-    padding: 30px 0;
+    padding-top: 30px;
 }
 
 p {
@@ -72,4 +91,8 @@ a {
 .forecast img {
     width: 50px;
     margin: 0 auto;
+}
+
+.highLow {
+    font-size: 15px;
 }
